# ch32f205_gcc_demo

./: .gitignore  CMakeLists.txt  README.md  main.c
config/: common.cmake  mcu.cmake  utils.cmake
libs/CH32F20x_StdPeriph_Driver/: CH32F205RB_FLASH.ld
scripts/: flash_fw.jlink
scripts/interface/: wch-cmsis-dap.cfg
